--- a/Final Report Data.ipynb
+++ b/Final Report Data.ipynb
@@ -224,16 +224,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "70ad5b5a-d007-47c6-b70b-92fc1daf69cb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 4000 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>ripeness</th><th scope=col>acidity</th><th scope=col>quality</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> 0.32983980</td><td>-0.4915905</td><td>good</td></tr>\n",
+       "\t<tr><td> 0.86753008</td><td>-0.7228094</td><td>good</td></tr>\n",
+       "\t<tr><td>-0.03803333</td><td> 2.6216365</td><td>bad </td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td> 4.7638592</td><td>-1.334611</td><td>bad </td></tr>\n",
+       "\t<tr><td> 0.2144884</td><td>-2.229720</td><td>good</td></tr>\n",
+       "\t<tr><td>-0.7765715</td><td> 1.599796</td><td>good</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 4000 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " ripeness & acidity & quality\\\\\n",
+       " <dbl> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t  0.32983980 & -0.4915905 & good\\\\\n",
+       "\t  0.86753008 & -0.7228094 & good\\\\\n",
+       "\t -0.03803333 &  2.6216365 & bad \\\\\n",
+       "\t ⋮ & ⋮ & ⋮\\\\\n",
+       "\t  4.7638592 & -1.334611 & bad \\\\\n",
+       "\t  0.2144884 & -2.229720 & good\\\\\n",
+       "\t -0.7765715 &  1.599796 & good\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 4000 × 3\n",
+       "\n",
+       "| ripeness &lt;dbl&gt; | acidity &lt;dbl&gt; | quality &lt;chr&gt; |\n",
+       "|---|---|---|\n",
+       "|  0.32983980 | -0.4915905 | good |\n",
+       "|  0.86753008 | -0.7228094 | good |\n",
+       "| -0.03803333 |  2.6216365 | bad  |\n",
+       "| ⋮ | ⋮ | ⋮ |\n",
+       "|  4.7638592 | -1.334611 | bad  |\n",
+       "|  0.2144884 | -2.229720 | good |\n",
+       "| -0.7765715 |  1.599796 | good |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     ripeness    acidity    quality\n",
+       "1     0.32983980 -0.4915905 good   \n",
+       "2     0.86753008 -0.7228094 good   \n",
+       "3    -0.03803333  2.6216365 bad    \n",
+       "⋮    ⋮           ⋮          ⋮      \n",
+       "3998  4.7638592  -1.334611  bad    \n",
+       "3999  0.2144884  -2.229720  good   \n",
+       "4000 -0.7765715   1.599796  good   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "set.seed(4321)\n",
     "#We selected the values we would use for our data analysis, which only included Ripeness, Acidity, and Quality.\n",
     "#A random sample of 100 was taken because the data set was so large.\n",
-    "apple_selected <- apple |>\n",
-    "    select(Ripeness, Acidity, Quality) |>\n",
+    "apple_select <- apple_manipulated |>\n",
+    "    select(ripeness, acidity, quality)\n",
     "apple_select"
    ]
   },
