--- a/Final Report Data.ipynb
+++ b/Final Report Data.ipynb
@@ -305,6 +305,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "00225830-0cc8-4f32-b0e1-90119afb5bda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# INSERT CROSS VALIDATION HERE (JUNYI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "af2bbf3c-736e-43b6-a44a-754b33ff0977",
    "metadata": {},
    "outputs": [],
@@ -313,7 +323,7 @@
     "apple_train <- training(apple_split)\n",
     "apple_test <- testing(apple_split)\n",
     "\n",
-    "apple_spec <- nearest_neighbor(weight_\n",
+    "apple_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = \n",
     "\n"
    ]
   },
