--- a/Final Report Data.ipynb
+++ b/Final Report Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "51a2d1ec-59a9-42c1-8715-056190b2614c",
    "metadata": {
     "editable": true,
@@ -44,7 +44,7 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Learn how to get started at \u001b[32mhttps://www.tidymodels.org/start/\u001b[39m\n",
+      "\u001b[34m•\u001b[39m Dig deeper into tidy modeling with R at \u001b[32mhttps://www.tmwr.org\u001b[39m\n",
       "\n",
       "\n",
       "Attaching package: ‘janitor’\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e3fa57d2-820f-4b4b-91df-9c633154139a",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0416c240-f9e0-4a59-8100-2bbcf4f40736",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "70ad5b5a-d007-47c6-b70b-92fc1daf69cb",
    "metadata": {},
    "outputs": [
@@ -334,12 +334,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "00225830-0cc8-4f32-b0e1-90119afb5bda",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# INSERT CROSS VALIDATION HERE (JUNYI)\n",
+    "set.seed(4321)\n",
+    "\n",
     "apple_split <- initial_split(apple_select, prop = 0.75, strata = quality)\n",
     "apple_train <- training(apple_split)\n",
     "apple_test <- testing(apple_split)\n",
@@ -351,7 +352,107 @@
     "apple_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = tune()) |>\n",
     "         set_engine(\"kknn\") |>\n",
     "         set_mode(\"classification\")\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "09e74bb6-2029-450d-b7e1-93dd42f5b504",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "══ Workflow ════════════════════════════════════════════════════════════════════\n",
+       "\u001b[3mPreprocessor:\u001b[23m Recipe\n",
+       "\u001b[3mModel:\u001b[23m nearest_neighbor()\n",
+       "\n",
+       "── Preprocessor ────────────────────────────────────────────────────────────────\n",
+       "2 Recipe Steps\n",
+       "\n",
+       "• step_scale()\n",
+       "• step_center()\n",
+       "\n",
+       "── Model ───────────────────────────────────────────────────────────────────────\n",
+       "K-Nearest Neighbor Model Specification (classification)\n",
+       "\n",
+       "Main Arguments:\n",
+       "  neighbors = tune()\n",
+       "  weight_func = rectangular\n",
+       "\n",
+       "Computational engine: kknn \n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 40 × 7</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>neighbors</th><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>mean</th><th scope=col>n</th><th scope=col>std_err</th><th scope=col>.config</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>accuracy</td><td>binary</td><td>0.5409962</td><td>5</td><td>0.005382947</td><td>Preprocessor1_Model01</td></tr>\n",
+       "\t<tr><td>1</td><td>roc_auc </td><td>binary</td><td>0.5409792</td><td>5</td><td>0.005362711</td><td>Preprocessor1_Model01</td></tr>\n",
+       "\t<tr><td>2</td><td>accuracy</td><td>binary</td><td>0.5409962</td><td>5</td><td>0.005382947</td><td>Preprocessor1_Model02</td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>19</td><td>roc_auc </td><td>binary</td><td>0.6471332</td><td>5</td><td>0.01349593</td><td>Preprocessor1_Model19</td></tr>\n",
+       "\t<tr><td>20</td><td>accuracy</td><td>binary</td><td>0.5999963</td><td>5</td><td>0.01321200</td><td>Preprocessor1_Model20</td></tr>\n",
+       "\t<tr><td>20</td><td>roc_auc </td><td>binary</td><td>0.6494338</td><td>5</td><td>0.01239439</td><td>Preprocessor1_Model20</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 40 × 7\n",
+       "\\begin{tabular}{lllllll}\n",
+       " neighbors & .metric & .estimator & mean & n & std\\_err & .config\\\\\n",
+       " <int> & <chr> & <chr> & <dbl> & <int> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t 1 & accuracy & binary & 0.5409962 & 5 & 0.005382947 & Preprocessor1\\_Model01\\\\\n",
+       "\t 1 & roc\\_auc  & binary & 0.5409792 & 5 & 0.005362711 & Preprocessor1\\_Model01\\\\\n",
+       "\t 2 & accuracy & binary & 0.5409962 & 5 & 0.005382947 & Preprocessor1\\_Model02\\\\\n",
+       "\t ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
+       "\t 19 & roc\\_auc  & binary & 0.6471332 & 5 & 0.01349593 & Preprocessor1\\_Model19\\\\\n",
+       "\t 20 & accuracy & binary & 0.5999963 & 5 & 0.01321200 & Preprocessor1\\_Model20\\\\\n",
+       "\t 20 & roc\\_auc  & binary & 0.6494338 & 5 & 0.01239439 & Preprocessor1\\_Model20\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 40 × 7\n",
+       "\n",
+       "| neighbors &lt;int&gt; | .metric &lt;chr&gt; | .estimator &lt;chr&gt; | mean &lt;dbl&gt; | n &lt;int&gt; | std_err &lt;dbl&gt; | .config &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| 1 | accuracy | binary | 0.5409962 | 5 | 0.005382947 | Preprocessor1_Model01 |\n",
+       "| 1 | roc_auc  | binary | 0.5409792 | 5 | 0.005362711 | Preprocessor1_Model01 |\n",
+       "| 2 | accuracy | binary | 0.5409962 | 5 | 0.005382947 | Preprocessor1_Model02 |\n",
+       "| ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ |\n",
+       "| 19 | roc_auc  | binary | 0.6471332 | 5 | 0.01349593 | Preprocessor1_Model19 |\n",
+       "| 20 | accuracy | binary | 0.5999963 | 5 | 0.01321200 | Preprocessor1_Model20 |\n",
+       "| 20 | roc_auc  | binary | 0.6494338 | 5 | 0.01239439 | Preprocessor1_Model20 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "   neighbors .metric  .estimator mean      n std_err     .config              \n",
+       "1  1         accuracy binary     0.5409962 5 0.005382947 Preprocessor1_Model01\n",
+       "2  1         roc_auc  binary     0.5409792 5 0.005362711 Preprocessor1_Model01\n",
+       "3  2         accuracy binary     0.5409962 5 0.005382947 Preprocessor1_Model02\n",
+       "⋮  ⋮         ⋮        ⋮          ⋮         ⋮ ⋮           ⋮                    \n",
+       "38 19        roc_auc  binary     0.6471332 5 0.01349593  Preprocessor1_Model19\n",
+       "39 20        accuracy binary     0.5999963 5 0.01321200  Preprocessor1_Model20\n",
+       "40 20        roc_auc  binary     0.6494338 5 0.01239439  Preprocessor1_Model20"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "apple_vfold<- vfold_cv(apple_train, v=5, strata=quality)\n",
     "\n",
     "apple_wkflw <- workflow() |>\n",
@@ -363,9 +464,9 @@
     "\n",
     "apple_results<- apple_wkflw |>\n",
     " tune_grid(resamples= apple_vfold, grid=gridvals) |>\n",
-    " collect_metrics()\n",
-    "apple_results\n",
-    "\n"
+    " collect_metrics() \n",
+    "\n",
+    "apple_results\n"
    ]
   },
   {
@@ -375,11 +476,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "apple_split <- initial_split(apple_select, prop = 0.75, strata = Quality)\n",
-    "apple_train <- training(apple_split)\n",
-    "apple_test <- testing(apple_split)\n",
+    "# apple_split <- initial_split(apple_select, prop = 0.75, strata = Quality)\n",
+    "# apple_train <- training(apple_split)\n",
+    "# apple_test <- testing(apple_split)\n",
     "\n",
-    "apple_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = \n",
+    "# apple_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = \n",
     "\n"
    ]
   },
