Paper stuff sources

--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -29,9 +29,25 @@
   {
    "cell_type": "markdown",
    "id": "6a2789fe-e37d-470f-8604-1dea0f280b2a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "# Methods & Results"
+    "# Methods & Results\n",
+    "## Methods\n",
+    "1. describe in written English the methods you used to perform your analysis from beginning to end that narrates the code the does the analysis.\r",
+    "2. \n",
+    "your report should include code which:- \r\n",
+    "loads data from the original source on the web-  \r\n",
+    "wrangles and cleans the data from it's original (downloaded) format to the format necessary for the planned analys- is\r\n",
+    "performs a summary of the data set that is relevant for exploratory data analysis related to the planned analys- is \r\n",
+    "creates a visualization of the dataset that is relevant for exploratory data analysis related to the planned anal- ysis\r\n",
+    "performs the data ana- lysis\r\n",
+    "creates a visualization of the aa- lysis \r\n",
+    "note: all tables and figure should have a figure/table number and a\n",
+    "Here's a sentence with a footnote. [^1]\r\n",
+    "\r\n",
+    "[^1]: This is the footnote. legend\r\n"
    ]
   },
   {
@@ -39,7 +55,11 @@
    "id": "432c7df4-f70e-4954-b36e-d4ccfa341f79",
    "metadata": {},
    "source": [
-    "# Disscusion"
+    "# Disscusion\n",
+    "summarize what you found\r\n",
+    "discuss whether this is what you expected to find?\r\n",
+    "discuss what impact could such findings have?\r\n",
+    "discuss what future questions could this lead to?\r\n"
    ]
   },
   {
@@ -47,7 +67,13 @@
    "id": "5cc67b27-3ea8-4904-94f4-07d6e08374ce",
    "metadata": {},
    "source": [
-    "# Sources "
+    "# Sources \n",
+    "Elgiriyewithana, N. (2024, January 11). Apple Quality. <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp\n",
+    ";Kaggle.  https://www.kaggle.com/datasets/nelgiriyewithana/apple-quality/data \n",
+    "    \n",
+    "Farcuh, M. (2023). Fruit Harvest - Determining Apple Fruit Maturity and Optimal Harvest Date. Determining Apple Fruit Maturity and Optimal Harvest Date. \n",
+    "\n",
+    "    Musacchi, S., & Serra, S. (2018). Apple Fruit Quality: Overview on pre-harvest factors. Scientia Horticulturae, 234, 409–430. https://doi.org/10.1016/j.scienta.2017.12.057 "
    ]
   },
   {
