Added more to the final Report

--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -33,16 +33,16 @@
    "source": [
     "# Methods & Results\n",
     "## Methods\n",
-    "1. describe in written English the methods you used to perform your analysis from beginning to end that narrates the code the does the analysis.\r",
-    "2. \n",
-    "your report should include code which:- \r\n",
+    "1. describe in written English the methods you used to perform your analysis from beginning to end that narrate the code that does the analysis.\n",
+    "2. your report should include code which:- \r",
+    "        \n",
     "loads data from the original source on the web-  \r\n",
-    "wrangles and cleans the data from it's original (downloaded) format to the format necessary for the planned analys- is\r\n",
-    "performs a summary of the data set that is relevant for exploratory data analysis related to the planned analys- is \r\n",
-    "creates a visualization of the dataset that is relevant for exploratory data analysis related to the planned anal- ysis\r\n",
-    "performs the data ana- lysis\r\n",
+    "wrangles and cleans the data froits's original (downloaded) format to the format necessary for the planneanalysisis\r\n",
+    "performs a summary of the data set that is relevant for exploratory data analysis related to the plannanalysis is \r\n",
+    "creates a visualization of the dataset that is relevant for exploratory data analysis related to the plananalysisysis\r\n",
+    "performs the analysislysis\r\n",
     "creates a visualization of the aa- lysis \r\n",
-    "note: all tables and figure should have a figure/table number. legend\r\n"
+    "note: all tablfigures figure should have a figure/table numbe. legend\r\n"
    ]
   },
   {
@@ -50,7 +50,8 @@
    "id": "3d5a2c75-726e-4b1f-97d4-b24fce8e4d6e",
    "metadata": {},
    "source": [
-    "### Libraries"
+    "### Analysis\n",
+    "First we loaded in the libraries that are needed for the data"
    ]
   },
   {
@@ -106,6 +107,7 @@
     }
    ],
    "source": [
+    "# Libraries used\n",
     "library(tidyverse)\n",
     "library(repr)\n",
     "library(tidymodels)\n",
@@ -114,9 +116,328 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2a6332e6-96b8-44c2-95dd-7ae877344894",
+   "metadata": {},
+   "source": [
+    "Then we created a dataframe for the data called `apple`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a0ccfc7e-0ff4-4b63-9491-fc31218adf3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mRows: \u001b[22m\u001b[34m4001\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m9\u001b[39m\n",
+      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
+      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
+      "\u001b[31mchr\u001b[39m (2): Acidity, Quality\n",
+      "\u001b[32mdbl\u001b[39m (7): A_id, Size, Weight, Sweetness, Crunchiness, Juiciness, Ripeness\n",
+      "\n",
+      "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
+      "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 4000 × 9</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>A_id</th><th scope=col>Size</th><th scope=col>Weight</th><th scope=col>Sweetness</th><th scope=col>Crunchiness</th><th scope=col>Juiciness</th><th scope=col>Ripeness</th><th scope=col>Acidity</th><th scope=col>Quality</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>0</td><td>-3.9700485</td><td>-2.512336</td><td> 5.346330</td><td>-1.0120087</td><td>1.8449004</td><td> 0.32983980</td><td>-0.491590483</td><td>good</td></tr>\n",
+       "\t<tr><td>1</td><td>-1.1952172</td><td>-2.839257</td><td> 3.664059</td><td> 1.5882323</td><td>0.8532858</td><td> 0.86753008</td><td>-0.722809367</td><td>good</td></tr>\n",
+       "\t<tr><td>2</td><td>-0.2920239</td><td>-1.351282</td><td>-1.738429</td><td>-0.3426159</td><td>2.8386355</td><td>-0.03803333</td><td>2.621636473 </td><td>bad </td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>3997</td><td>-2.6345153</td><td>-2.138247</td><td>-2.4404613</td><td> 0.6572229</td><td>2.199709</td><td> 4.7638592</td><td>-1.334611391</td><td>bad </td></tr>\n",
+       "\t<tr><td>3998</td><td>-4.0080037</td><td>-1.779337</td><td> 2.3663970</td><td>-0.2003294</td><td>2.161435</td><td> 0.2144884</td><td>-2.229719806</td><td>good</td></tr>\n",
+       "\t<tr><td>3999</td><td> 0.2785397</td><td>-1.715505</td><td> 0.1212173</td><td>-1.1540748</td><td>1.266677</td><td>-0.7765715</td><td>1.599796456 </td><td>good</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 4000 × 9\n",
+       "\\begin{tabular}{lllllllll}\n",
+       " A\\_id & Size & Weight & Sweetness & Crunchiness & Juiciness & Ripeness & Acidity & Quality\\\\\n",
+       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <chr> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t 0 & -3.9700485 & -2.512336 &  5.346330 & -1.0120087 & 1.8449004 &  0.32983980 & -0.491590483 & good\\\\\n",
+       "\t 1 & -1.1952172 & -2.839257 &  3.664059 &  1.5882323 & 0.8532858 &  0.86753008 & -0.722809367 & good\\\\\n",
+       "\t 2 & -0.2920239 & -1.351282 & -1.738429 & -0.3426159 & 2.8386355 & -0.03803333 & 2.621636473  & bad \\\\\n",
+       "\t ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
+       "\t 3997 & -2.6345153 & -2.138247 & -2.4404613 &  0.6572229 & 2.199709 &  4.7638592 & -1.334611391 & bad \\\\\n",
+       "\t 3998 & -4.0080037 & -1.779337 &  2.3663970 & -0.2003294 & 2.161435 &  0.2144884 & -2.229719806 & good\\\\\n",
+       "\t 3999 &  0.2785397 & -1.715505 &  0.1212173 & -1.1540748 & 1.266677 & -0.7765715 & 1.599796456  & good\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 4000 × 9\n",
+       "\n",
+       "| A_id &lt;dbl&gt; | Size &lt;dbl&gt; | Weight &lt;dbl&gt; | Sweetness &lt;dbl&gt; | Crunchiness &lt;dbl&gt; | Juiciness &lt;dbl&gt; | Ripeness &lt;dbl&gt; | Acidity &lt;chr&gt; | Quality &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|\n",
+       "| 0 | -3.9700485 | -2.512336 |  5.346330 | -1.0120087 | 1.8449004 |  0.32983980 | -0.491590483 | good |\n",
+       "| 1 | -1.1952172 | -2.839257 |  3.664059 |  1.5882323 | 0.8532858 |  0.86753008 | -0.722809367 | good |\n",
+       "| 2 | -0.2920239 | -1.351282 | -1.738429 | -0.3426159 | 2.8386355 | -0.03803333 | 2.621636473  | bad  |\n",
+       "| ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ |\n",
+       "| 3997 | -2.6345153 | -2.138247 | -2.4404613 |  0.6572229 | 2.199709 |  4.7638592 | -1.334611391 | bad  |\n",
+       "| 3998 | -4.0080037 | -1.779337 |  2.3663970 | -0.2003294 | 2.161435 |  0.2144884 | -2.229719806 | good |\n",
+       "| 3999 |  0.2785397 | -1.715505 |  0.1212173 | -1.1540748 | 1.266677 | -0.7765715 | 1.599796456  | good |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     A_id Size       Weight    Sweetness  Crunchiness Juiciness Ripeness   \n",
+       "1    0    -3.9700485 -2.512336  5.346330  -1.0120087  1.8449004  0.32983980\n",
+       "2    1    -1.1952172 -2.839257  3.664059   1.5882323  0.8532858  0.86753008\n",
+       "3    2    -0.2920239 -1.351282 -1.738429  -0.3426159  2.8386355 -0.03803333\n",
+       "⋮    ⋮    ⋮          ⋮         ⋮          ⋮           ⋮         ⋮          \n",
+       "3998 3997 -2.6345153 -2.138247 -2.4404613  0.6572229  2.199709   4.7638592 \n",
+       "3999 3998 -4.0080037 -1.779337  2.3663970 -0.2003294  2.161435   0.2144884 \n",
+       "4000 3999  0.2785397 -1.715505  0.1212173 -1.1540748  1.266677  -0.7765715 \n",
+       "     Acidity      Quality\n",
+       "1    -0.491590483 good   \n",
+       "2    -0.722809367 good   \n",
+       "3    2.621636473  bad    \n",
+       "⋮    ⋮            ⋮      \n",
+       "3998 -1.334611391 bad    \n",
+       "3999 -2.229719806 good   \n",
+       "4000 1.599796456  good   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Table 1: Apple dataset\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "apple <- read_csv(\"data/apple_quality.csv\") |>\n",
+    "    head(-1) #This function removes the last row of the dataframe which included NA values and text crediting the author. |>\n",
+    "apple\n",
+    "print(\"Table 1: Apple dataset\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cbe72a32-a15f-4cf2-b669-c76f60f9b53a",
+   "metadata": {},
+   "source": [
+    "### Cleaning up the Data \n",
+    "\n",
+    "As noted, we have read the CSV file where the data is stored. However, the data is cluttered with numerous columns that are irrelevant to our classification model. To ensure precision, we meticulously clean up the data, selecting only the specific columns that are crucial for our model's accuracy.\n",
+    "\n",
+    "BONUS: We noticed that R had trouble reading the original `Acidity` column. This was most likely because there were hidden characters in the file that R could not read, so we cleaned up the data below with the following code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "cdbba0e1-efef-4270-afce-46075775fec3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 4000 × 9</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>a_id</th><th scope=col>size</th><th scope=col>weight</th><th scope=col>sweetness</th><th scope=col>crunchiness</th><th scope=col>juiciness</th><th scope=col>ripeness</th><th scope=col>acidity</th><th scope=col>quality</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>0</td><td>-3.9700485</td><td>-2.512336</td><td> 5.346330</td><td>-1.0120087</td><td>1.8449004</td><td> 0.32983980</td><td>-0.4915905</td><td>good</td></tr>\n",
+       "\t<tr><td>1</td><td>-1.1952172</td><td>-2.839257</td><td> 3.664059</td><td> 1.5882323</td><td>0.8532858</td><td> 0.86753008</td><td>-0.7228094</td><td>good</td></tr>\n",
+       "\t<tr><td>2</td><td>-0.2920239</td><td>-1.351282</td><td>-1.738429</td><td>-0.3426159</td><td>2.8386355</td><td>-0.03803333</td><td> 2.6216365</td><td>bad </td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>3997</td><td>-2.6345153</td><td>-2.138247</td><td>-2.4404613</td><td> 0.6572229</td><td>2.199709</td><td> 4.7638592</td><td>-1.334611</td><td>bad </td></tr>\n",
+       "\t<tr><td>3998</td><td>-4.0080037</td><td>-1.779337</td><td> 2.3663970</td><td>-0.2003294</td><td>2.161435</td><td> 0.2144884</td><td>-2.229720</td><td>good</td></tr>\n",
+       "\t<tr><td>3999</td><td> 0.2785397</td><td>-1.715505</td><td> 0.1212173</td><td>-1.1540748</td><td>1.266677</td><td>-0.7765715</td><td> 1.599796</td><td>good</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 4000 × 9\n",
+       "\\begin{tabular}{lllllllll}\n",
+       " a\\_id & size & weight & sweetness & crunchiness & juiciness & ripeness & acidity & quality\\\\\n",
+       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t 0 & -3.9700485 & -2.512336 &  5.346330 & -1.0120087 & 1.8449004 &  0.32983980 & -0.4915905 & good\\\\\n",
+       "\t 1 & -1.1952172 & -2.839257 &  3.664059 &  1.5882323 & 0.8532858 &  0.86753008 & -0.7228094 & good\\\\\n",
+       "\t 2 & -0.2920239 & -1.351282 & -1.738429 & -0.3426159 & 2.8386355 & -0.03803333 &  2.6216365 & bad \\\\\n",
+       "\t ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
+       "\t 3997 & -2.6345153 & -2.138247 & -2.4404613 &  0.6572229 & 2.199709 &  4.7638592 & -1.334611 & bad \\\\\n",
+       "\t 3998 & -4.0080037 & -1.779337 &  2.3663970 & -0.2003294 & 2.161435 &  0.2144884 & -2.229720 & good\\\\\n",
+       "\t 3999 &  0.2785397 & -1.715505 &  0.1212173 & -1.1540748 & 1.266677 & -0.7765715 &  1.599796 & good\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 4000 × 9\n",
+       "\n",
+       "| a_id &lt;dbl&gt; | size &lt;dbl&gt; | weight &lt;dbl&gt; | sweetness &lt;dbl&gt; | crunchiness &lt;dbl&gt; | juiciness &lt;dbl&gt; | ripeness &lt;dbl&gt; | acidity &lt;dbl&gt; | quality &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|\n",
+       "| 0 | -3.9700485 | -2.512336 |  5.346330 | -1.0120087 | 1.8449004 |  0.32983980 | -0.4915905 | good |\n",
+       "| 1 | -1.1952172 | -2.839257 |  3.664059 |  1.5882323 | 0.8532858 |  0.86753008 | -0.7228094 | good |\n",
+       "| 2 | -0.2920239 | -1.351282 | -1.738429 | -0.3426159 | 2.8386355 | -0.03803333 |  2.6216365 | bad  |\n",
+       "| ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ |\n",
+       "| 3997 | -2.6345153 | -2.138247 | -2.4404613 |  0.6572229 | 2.199709 |  4.7638592 | -1.334611 | bad  |\n",
+       "| 3998 | -4.0080037 | -1.779337 |  2.3663970 | -0.2003294 | 2.161435 |  0.2144884 | -2.229720 | good |\n",
+       "| 3999 |  0.2785397 | -1.715505 |  0.1212173 | -1.1540748 | 1.266677 | -0.7765715 |  1.599796 | good |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     a_id size       weight    sweetness  crunchiness juiciness ripeness   \n",
+       "1    0    -3.9700485 -2.512336  5.346330  -1.0120087  1.8449004  0.32983980\n",
+       "2    1    -1.1952172 -2.839257  3.664059   1.5882323  0.8532858  0.86753008\n",
+       "3    2    -0.2920239 -1.351282 -1.738429  -0.3426159  2.8386355 -0.03803333\n",
+       "⋮    ⋮    ⋮          ⋮         ⋮          ⋮           ⋮         ⋮          \n",
+       "3998 3997 -2.6345153 -2.138247 -2.4404613  0.6572229  2.199709   4.7638592 \n",
+       "3999 3998 -4.0080037 -1.779337  2.3663970 -0.2003294  2.161435   0.2144884 \n",
+       "4000 3999  0.2785397 -1.715505  0.1212173 -1.1540748  1.266677  -0.7765715 \n",
+       "     acidity    quality\n",
+       "1    -0.4915905 good   \n",
+       "2    -0.7228094 good   \n",
+       "3     2.6216365 bad    \n",
+       "⋮    ⋮          ⋮      \n",
+       "3998 -1.334611  bad    \n",
+       "3999 -2.229720  good   \n",
+       "4000  1.599796  good   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Table 2: Apple dataset (tidy)\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "apple_manipulated <- apple |>\n",
+    "    clean_names() |>\n",
+    "    mutate(acidity = as.numeric(acidity))\n",
+    "apple_manipulated\n",
+    "print(\"Table 2: Apple dataset (tidy)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1d64cf97-15d9-478e-b07e-10e6f9cf180e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 4000 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>ripeness</th><th scope=col>acidity</th><th scope=col>quality</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td> 0.32983980</td><td>-0.4915905</td><td>good</td></tr>\n",
+       "\t<tr><td> 0.86753008</td><td>-0.7228094</td><td>good</td></tr>\n",
+       "\t<tr><td>-0.03803333</td><td> 2.6216365</td><td>bad </td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td> 4.7638592</td><td>-1.334611</td><td>bad </td></tr>\n",
+       "\t<tr><td> 0.2144884</td><td>-2.229720</td><td>good</td></tr>\n",
+       "\t<tr><td>-0.7765715</td><td> 1.599796</td><td>good</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 4000 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " ripeness & acidity & quality\\\\\n",
+       " <dbl> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t  0.32983980 & -0.4915905 & good\\\\\n",
+       "\t  0.86753008 & -0.7228094 & good\\\\\n",
+       "\t -0.03803333 &  2.6216365 & bad \\\\\n",
+       "\t ⋮ & ⋮ & ⋮\\\\\n",
+       "\t  4.7638592 & -1.334611 & bad \\\\\n",
+       "\t  0.2144884 & -2.229720 & good\\\\\n",
+       "\t -0.7765715 &  1.599796 & good\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 4000 × 3\n",
+       "\n",
+       "| ripeness &lt;dbl&gt; | acidity &lt;dbl&gt; | quality &lt;chr&gt; |\n",
+       "|---|---|---|\n",
+       "|  0.32983980 | -0.4915905 | good |\n",
+       "|  0.86753008 | -0.7228094 | good |\n",
+       "| -0.03803333 |  2.6216365 | bad  |\n",
+       "| ⋮ | ⋮ | ⋮ |\n",
+       "|  4.7638592 | -1.334611 | bad  |\n",
+       "|  0.2144884 | -2.229720 | good |\n",
+       "| -0.7765715 |  1.599796 | good |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     ripeness    acidity    quality\n",
+       "1     0.32983980 -0.4915905 good   \n",
+       "2     0.86753008 -0.7228094 good   \n",
+       "3    -0.03803333  2.6216365 bad    \n",
+       "⋮    ⋮           ⋮          ⋮      \n",
+       "3998  4.7638592  -1.334611  bad    \n",
+       "3999  0.2144884  -2.229720  good   \n",
+       "4000 -0.7765715   1.599796  good   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Table 3: Apple select dataset\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "set.seed(4321)\n",
+    "#We selected the values we would use for our data analysis, which only included Ripeness, Acidity, and Quality.\n",
+    "#A random sample of 100 was taken because the data set was so large.\n",
+    "apple_select <- apple_manipulated |>\n",
+    "    select(ripeness, acidity, quality)\n",
+    "apple_select\n",
+    "print(\"Table 3: Apple select dataset\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fb1e5b0-2878-4bd4-86fd-1e9e898b65b1",
+   "metadata": {},
+   "source": [
+    "## Results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d762a97-e7e7-4e25-ac7b-ea7a158b87eb",
+   "id": "11bd4b38-e65b-4137-b567-44fcb92313e1",
    "metadata": {},
    "outputs": [],
    "source": []
