Added to teh main file
Added to the main file

--- a/Final Report Data.ipynb
+++ b/Final Report Data.ipynb
@@ -896,7 +896,8 @@
    "id": "0641fdcd-ee8a-4885-b22e-b6b7788226b1",
    "metadata": {},
    "source": [
-    "### Using the Model to Predict Quality ###\n",
+    "### Using the Model to Predict Quality\n",
+    "\n",
     "Now that we have created our finalized classification model, with a defind K value, we will now use that model to make sample predictions on the quality of an apple, given any value for both acidity and ripeness."
    ]
   },
