--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -125,24 +125,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "id": "a0ccfc7e-0ff4-4b63-9491-fc31218adf3a",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1mRows: \u001b[22m\u001b[34m4001\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m9\u001b[39m\n",
-      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
-      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
-      "\u001b[31mchr\u001b[39m (2): Acidity, Quality\n",
-      "\u001b[32mdbl\u001b[39m (7): A_id, Size, Weight, Sweetness, Crunchiness, Juiciness, Ripeness\n",
-      "\n",
-      "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
-      "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -225,7 +211,7 @@
    ],
    "source": [
     "\n",
-    "apple <- read_csv(\"data/apple_quality.csv\") |>\n",
+    "apple <- read_csv(\"data/apple_quality.csv\",show_col_types = FALSE) |>\n",
     "    head(-1) #This function removes the last row of the dataframe which included NA values and text crediting the author. |>\n",
     "apple\n",
     "print(\"Table 1: Apple dataset\")"
@@ -245,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "id": "cdbba0e1-efef-4270-afce-46075775fec3",
    "metadata": {},
    "outputs": [
@@ -340,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "id": "1d64cf97-15d9-478e-b07e-10e6f9cf180e",
    "metadata": {},
    "outputs": [
