--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -1021,11 +1021,263 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "364a163a-aaf6-4f4a-9034-7d5e01fdc8df",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "══ Workflow [trained] ══════════════════════════════════════════════════════════\n",
+       "\u001b[3mPreprocessor:\u001b[23m Recipe\n",
+       "\u001b[3mModel:\u001b[23m nearest_neighbor()\n",
+       "\n",
+       "── Preprocessor ────────────────────────────────────────────────────────────────\n",
+       "2 Recipe Steps\n",
+       "\n",
+       "• step_scale()\n",
+       "• step_center()\n",
+       "\n",
+       "── Model ───────────────────────────────────────────────────────────────────────\n",
+       "\n",
+       "Call:\n",
+       "kknn::train.kknn(formula = ..y ~ ., data = data, ks = min_rows(11,     data, 5), kernel = ~\"rectangular\")\n",
+       "\n",
+       "Type of response variable: nominal\n",
+       "Minimal misclassification: 0.392\n",
+       "Best kernel: rectangular\n",
+       "Best k: 11"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# We now create the new model with this selected K Value\n",
+    "\n",
+    "set.seed(4321)\n",
+    "\n",
+    "apple_vfold<- vfold_cv(apple_train, v=5, strata=quality)\n",
+    "\n",
+    "apple_recipe_final <- recipe(quality ~ ripeness + acidity, data = apple_train) |>\n",
+    " step_scale(all_predictors())|>\n",
+    " step_center(all_predictors())\n",
+    "\n",
+    "apple_spec_final <- nearest_neighbor(weight_func = \"rectangular\", neighbors = 11) |>\n",
+    "         set_engine(\"kknn\") |>\n",
+    "         set_mode(\"classification\")\n",
+    "\n",
+    "apple_fit <- workflow() |>\n",
+    "    add_recipe(apple_recipe_final) |>\n",
+    "    add_model(apple_spec_final) |>\n",
+    "    fit(data = apple_select)\n",
+    "\n",
+    "apple_fit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61d30d28-1f5d-419d-b7d3-2c27f308889c",
+   "metadata": {},
+   "source": [
+    "### Using the Model to Predict Quality\n",
+    "\n",
+    "Now that we have created our finalized classification model, with a defind K value, we will now use that model to make sample predictions on the quality of an apple, given any value for both acidity and ripeness."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "80411ad3-62d7-44fa-8f76-56d1dc105d3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Table 4: Apple Prediction 1\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 1 × 1</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.pred_class</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>good</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 1 × 1\n",
+       "\\begin{tabular}{l}\n",
+       " .pred\\_class\\\\\n",
+       " <fct>\\\\\n",
+       "\\hline\n",
+       "\t good\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 1 × 1\n",
+       "\n",
+       "| .pred_class &lt;fct&gt; |\n",
+       "|---|\n",
+       "| good |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  .pred_class\n",
+       "1 good       "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "apple_prediction_1 <- tibble(ripeness = 1.11, acidity = 1.11)\n",
+    "apple_prediction_2 <- tibble(ripeness = 0.51, acidity = 0.61)\n",
+    "apple_prediction_3 <- tibble(ripeness = 1.01, acidity = 0.91)\n",
+    "apple_prediction_4 <- tibble(ripeness = -0.123, acidity = -0.123)\n",
+    "apple_prediction_5 <- tibble(ripeness = 2.5, acidity = -1.5)\n",
+    "\n",
+    "# For this example, we will use the apple_prediction_1 (You can create your own random observations or pull some to demonstrate)\n",
+    "print(\"Table 4: Apple Prediction 1\")\n",
+    "apple_predicted <- predict(apple_fit, apple_prediction_1)\n",
+    "apple_predicted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "714335e7-ecb3-4057-a864-d77fa9a9104b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Table 5: Apple Prediction 2\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 1 × 1</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.pred_class</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>bad</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 1 × 1\n",
+       "\\begin{tabular}{l}\n",
+       " .pred\\_class\\\\\n",
+       " <fct>\\\\\n",
+       "\\hline\n",
+       "\t bad\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 1 × 1\n",
+       "\n",
+       "| .pred_class &lt;fct&gt; |\n",
+       "|---|\n",
+       "| bad |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  .pred_class\n",
+       "1 bad        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Sample Prediction 2\n",
+    "print(\"Table 5: Apple Prediction 2\")\n",
+    "apple_predicted_2 <- predict(apple_fit, apple_prediction_2)\n",
+    "apple_predicted_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "471e4e8a-64a2-459e-87c4-defbf5dfac71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Table 6: Apple Prediction first observation\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 1 × 1</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.pred_class</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>good</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 1 × 1\n",
+       "\\begin{tabular}{l}\n",
+       " .pred\\_class\\\\\n",
+       " <fct>\\\\\n",
+       "\\hline\n",
+       "\t good\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 1 × 1\n",
+       "\n",
+       "| .pred_class &lt;fct&gt; |\n",
+       "|---|\n",
+       "| good |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  .pred_class\n",
+       "1 good       "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Sample Prediction (From the first observation of apple_select)\n",
+    "print(\"Table 6: Apple Prediction first observation\")\n",
+    "apple_prediction_ds_0 <- tibble(ripeness = 0.32983980, acidity = -0.4915905)\n",
+    "\n",
+    "apple_predicted_ds_0 <- predict(apple_fit, apple_prediction_ds_0)\n",
+    "apple_predicted_ds_0\n",
+    "\n",
+    "# Bonus: From what we can see, the predictions match! You can continue and try different values. These 3 were for a demonstration that our model works!"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1034,9 +1286,12 @@
    "source": [
     "# Disscusion\n",
     "summarize what you found\r\n",
-    "discuss whether this is what you expected to find?\r\n",
-    "discuss what impact could such findings have?\r\n",
-    "discuss what future questions could this lead to?\r\n"
+    "discuss whether this is what you expected to find\n",
+    "\n",
+    "## Impact?\r\n",
+    "discuss what impact could such findings havet\n",
+    "## Future Questions\n",
+    "discuss what future questions could this lead to?o?\r\n"
    ]
   },
   {
