--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -35,14 +35,12 @@
     "## Methods\n",
     "1. describe in written English the methods you used to perform your analysis from beginning to end that narrate the code that does the analysis.\n",
     "2. your report should include code which:- \r",
-    "        \n",
-    "loads data from the original source on the web-  \r\n",
-    "wrangles and cleans the data froits's original (downloaded) format to the format necessary for the planneanalysisis\r\n",
-    "performs a summary of the data set that is relevant for exploratory data analysis related to the plannanalysis is \r\n",
-    "creates a visualization of the dataset that is relevant for exploratory data analysis related to the plananalysisysis\r\n",
-    "performs the analysislysis\r\n",
-    "creates a visualization of the aa- lysis \r\n",
-    "note: all tablfigures figure should have a figure/table numbe. legend\r\n"
+    "            \r\n",
+    "performs a summary of the data set that is relevant for exploratory data analysis related to the plannanalysis \n",
+    "            is\r\n",
+    "perf the analysis lysisly            sis\r\n",
+    "creates a visualization of the aa- ly            sis \r\n",
+    "note: ale/l tablfigures figure should have a figure/tabler legend\r\n"
    ]
   },
   {
@@ -1277,6 +1275,15 @@
     "apple_predicted_ds_0\n",
     "\n",
     "# Bonus: From what we can see, the predictions match! You can continue and try different values. These 3 were for a demonstration that our model works!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bc86675-05e8-47e5-9dae-5aee464defba",
+   "metadata": {},
+   "source": [
+    "# Visualization of the Dataset\n",
+    "creates a visualization of the dataset that is relevant for exploratory data analysis related to the plananalysisysis"
    ]
   },
   {
