--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -1293,12 +1293,29 @@
    "source": [
     "# Disscusion\n",
     "summarize what you found\r\n",
-    "discuss whether this is what you expected to find\n",
-    "\n",
-    "## Impact?\r\n",
-    "discuss what impact could such findings havet\n",
+    "discuss whether this is what you expected to fin?\r\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "168b061e-45bf-4af6-b5ed-55dda646a5cb",
+   "metadata": {},
+   "source": [
+    "## Impact?\n",
+    "Discuss what impact such findings could have"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a82d686-3458-4f80-9abb-0688d2615b1b",
+   "metadata": {},
+   "source": [
     "## Future Questions\n",
-    "discuss what future questions could this lead to?o?\r\n"
+    "- With the high variation of values across different variables, would it be better if there were more than two quality classifications (e.g., giving quality ranking a numerical system like 1-5 instead of just “good” or “bad”)?\n",
+    "- Could this model be extended to other fruits and vegetables, broadening its potential impact and applications beyond just apples?\n",
+    "- Are there any other values for K that we did not cover that could create a model as accurate or if not, more accurate than our current model?\n",
+    "- Since our dataset doesn’t explicitly mention the species of apples used, how might changes in apple species affect our predictions? Since species have unique characteristics, would this skew the standard to which any given observation is “good” or “bad”?\n",
+    "- What other relationships could we explore if we approached this dataset with a different model such as KNN and or linear regression?"
    ]
   },
   {
